--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -1,15 +1,15 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent" tools:context="pk.edu.pucit.mian.loginapp.SignUp"
-    android:background="@drawable/bg">
-
+    android:background="@drawable/bg"
+    android:orientation="vertical"
+    android:gravity="center_horizontal">
 
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/imageView"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
+
         android:src="@drawable/sign_up_text"
         android:layout_marginTop="20dp"/>
 
@@ -17,8 +17,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/imageView2"
-        android:layout_below="@+id/imageView"
-        android:layout_centerHorizontal="true"
+
         android:layout_marginTop="67dp"
         android:src="@drawable/logo" />
 
@@ -26,10 +25,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/signup_email"
-        android:layout_below="@+id/imageView2"
-        android:layout_centerHorizontal="true"
         android:layout_marginTop="44dp"
-
         android:background="@drawable/email"
         android:hint="Phone Number/Email"
         android:lines="1"
@@ -47,9 +43,6 @@
         android:background="@drawable/password"
         android:hint="Password"
         android:inputType="textPassword"
-        android:layout_centerVertical="true"
-        android:layout_alignLeft="@+id/imageView2"
-        android:layout_alignStart="@+id/imageView2"
         android:layout_marginTop="10dp"
         android:gravity="center"
         android:lines="1"
@@ -62,8 +55,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/signup_button"
-        android:layout_below="@+id/signup_password"
-        android:layout_centerHorizontal="true"
+
         android:layout_marginTop="22dp"
         android:background="@drawable/sign_up_button" />
 
@@ -71,8 +63,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/goto_login"
-        android:layout_below="@+id/signup_button"
-        android:layout_centerHorizontal="true"
+
         android:layout_marginTop="40dp"
         android:src="@drawable/already_have_account"
         android:clickable="true" />
@@ -82,8 +73,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/imageView4"
         android:src="@drawable/terms_and_conditions"
-        android:layout_alignParentBottom="true"
-        android:layout_alignLeft="@+id/imageView"
-        android:layout_alignStart="@+id/imageView"
-        android:layout_marginBottom="46dp" />
-</RelativeLayout>
+
+        android:layout_marginTop="76dp" />
+
+</LinearLayout>
